crates/serde-feather/tests/ui/duplicate_wire_name.stderr
error: duplicate wire field name `id` in serialization; conflicts with field `first`
 --> tests/ui/duplicate_wire_name.rs:7:22
  |
7 |     #[serde(rename = "id")]
  |                      ^^^^
